--- a/app/src/main/res/drawable/ratingbar_filme.xml
+++ b/app/src/main/res/drawable/ratingbar_filme.xml
@@ -6,6 +6,6 @@
     <item android:id="@android:id/secondaryProgress"
         android:drawable="@drawable/ratingbar_half" />
 
-    <item android:id="@+android:id/progress"
+    <item android:id="@android:id/progress"
         android:drawable="@drawable/ratingbar_filled" />
 </layer-list>
