--- a/app/src/main/res/layout/calendar_adapter.xml
+++ b/app/src/main/res/layout/calendar_adapter.xml
@@ -18,7 +18,7 @@
 
         <ImageView
             android:id="@+id/poster"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
@@ -38,8 +38,10 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/primary"
             android:textStyle="normal|bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/poster"
@@ -53,7 +55,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="2dp"
-
+            android:textColor="@color/accent"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/poster"
             app:layout_constraintTop_toBottomOf="@+id/title"
@@ -66,7 +68,6 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +83,6 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/poster"
@@ -91,21 +91,16 @@
 
         <TextView
             android:id="@+id/new_seguindo"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:text="@string/new_segiundo"
             android:textAppearance="@style/TextAppearance.AppCompat"
             android:textColor="@color/imdb"
             android:textStyle="normal|bold"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/poster"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             tools:visibility="visible" />
 
         <LinearLayout
@@ -114,8 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="2dp"
             android:layout_marginRight="8dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -133,9 +127,9 @@
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:indeterminate="true"
                 android:layout_marginLeft="@dimen/trade_size_dp_10"
                 android:layout_marginRight="@dimen/trade_size_dp_10"
+                android:indeterminate="true"
                 android:theme="@style/AppTheme" />
 
         </LinearLayout>
@@ -149,7 +143,6 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:textStyle="normal|bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/poster"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             tools:text="20" />
