--- a/app/src/main/res/layout/activity_elenco.xml
+++ b/app/src/main/res/layout/activity_elenco.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:layout_marginBottom="@dimen/trade_size_dp_50"
             android:background="@android:color/transparent">
 
             <TextView
@@ -45,25 +46,20 @@
             <include
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 layout="@layout/include_progress_horizontal"
-                android:layout_gravity="center_horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal" />
 
         </FrameLayout>
 
     </LinearLayout>
 
-
-    <!--<com.google.android.gms.ads.AdView-->
-        <!--android:id="@+id/adView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:visibility="gone"-->
-        <!--app:adSize="SMART_BANNER"-->
-        <!--app:adUnitId="@string/admob"-->
-        <!--android:layout_gravity="bottom" />-->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="@string/admob" />
 
 </android.support.design.widget.CoordinatorLayout>
