--- a/app/src/main/res/layout/activity_similares.xml
+++ b/app/src/main/res/layout/activity_similares.xml
@@ -14,17 +14,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <!--<LinearLayout-->
-        <!--android:id="@+id/linear_similares_layout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:orientation="vertical"-->
-        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
+        android:layout_marginBottom="@dimen/trade_size_dp_50"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v7.widget.RecyclerView
@@ -45,16 +39,13 @@
 
     </FrameLayout>
 
-    <!--</LinearLayout>-->
-
-    <!--<com.google.android.gms.ads.AdView-->
-        <!--android:id="@+id/adView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:visibility="gone"-->
-        <!--app:adSize="SMART_BANNER"-->
-        <!--app:adUnitId="@string/admob"-->
-        <!--android:layout_gravity="bottom" />-->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="@string/admob"
+        android:layout_gravity="bottom" />
 
 </android.support.design.widget.CoordinatorLayout>
