--- a/app/src/main/res/layout/scroll_crews.xml
+++ b/app/src/main/res/layout/scroll_crews.xml
@@ -15,8 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="bottom|center_horizontal"
-        android:lines="2"
-        android:maxLength="14" />
+        android:maxLength="14"
+        android:maxLines="2" />
 
     <FrameLayout
 
@@ -47,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:ellipsize="end"
         android:gravity="top|center_horizontal"
         android:maxLength="14"
         android:maxLines="2" />
