--- a/app/src/main/res/layout/scroll_elenco.xml
+++ b/app/src/main/res/layout/scroll_elenco.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scroll_elenco_linearlayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -14,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="bottom|center_horizontal"
-        android:lines="2"
+        tools:text="Nome do cara"
+        android:maxLines="2"
         android:maxLength="14" />
 
     <FrameLayout android:layout_height="@dimen/trade_size_dp_140"
