--- a/app/src/main/res/layout/activity_usuario_list.xml
+++ b/app/src/main/res/layout/activity_usuario_list.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.core.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:layout_width="match_parent"
             android:id="@+id/viewpage_usuario"
             android:layout_height="match_parent"/>
