--- a/app/src/main/res/layout-small/activity_login.xml
+++ b/app/src/main/res/layout-small/activity_login.xml
@@ -57,7 +57,7 @@
 
         </LinearLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/trade_size_dp_5">
@@ -74,9 +74,9 @@
                 android:hint="@string/email_tx"
                 android:inputType="textEmailAddress"
                 android:textSize="14sp" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/trade_size_dp_3">
@@ -93,7 +93,7 @@
                 android:hint="@string/password"
                 android:inputType="textPassword"
                 android:textSize="14sp" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/logar"
@@ -136,13 +136,6 @@
 
 
         </LinearLayout>
-
-        <!--<com.google.android.gms.common.SignInButton-->
-        <!--android:id="@+id/sign_in_button"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="@dimen/trade_size_dp_12"-->
-        <!--android:visibility="gone" />-->
 
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/facebook"
