--- a/app/src/main/res/layout-small/dialog_collection.xml
+++ b/app/src/main/res/layout-small/dialog_collection.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <androidx.core.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager_collection"
         android:layout_width="wrap_content"
         android:layout_height="200dp" />
