--- a/app/src/main/res/layout/activity_epsodios.xml
+++ b/app/src/main/res/layout/activity_epsodios.xml
@@ -5,7 +5,7 @@
 
     <include layout="@layout/include_toolbar" />
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout_epsodio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <androidx.core.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager_epsodio"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
