--- a/app/src/main/res/layout/ad_unified.xml
+++ b/app/src/main/res/layout/ad_unified.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -27,11 +27,11 @@
                 android:id="@+id/ad_attribution"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:width="15dp"
                 android:height="15dp"
                 android:background="#FFCC66"
-                android:text="Ad"
+                tools:text="Ad"
                 android:textColor="#FFFFFF"
                 android:textSize="12sp"
                 card_view:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,6 @@
                 android:layout_marginTop="4dp"
                 android:adjustViewBounds="true"
                 android:paddingEnd="5dp"
-                android:paddingRight="5dp"
                 android:paddingBottom="5dp"
                 card_view:layout_constraintStart_toEndOf="@+id/ad_attribution"
                 card_view:layout_constraintTop_toBottomOf="@+id/ad_headline" />
@@ -55,9 +54,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
                 android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"
                 android:maxLength="25"
                 android:maxLines="2"
                 android:textColor="#0000FF"
@@ -75,7 +72,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
                 android:isIndicator="true"
                 android:numStars="5"
                 android:rating="4"
@@ -159,14 +155,15 @@
                 android:id="@+id/ad_store"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:maxLength="15"
                 android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:paddingEnd="5dp"
                 android:paddingRight="5dp"
                 android:textSize="12sp"
-                tools:layout_editor_absoluteX="71dp"
-                tools:layout_editor_absoluteY="68dp"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintTop_toBottomOf="@+id/ad_stars"
                 tools:text="15 caracteres 15 caracteres" />
 
             <Button
@@ -174,10 +171,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginBottom="2dp"
                 android:gravity="center"
                 android:maxLength="15"
@@ -190,7 +185,7 @@
                 card_view:layout_constraintVertical_bias="1.0"
                 tools:text="15 caracteres 15 caracteres 15 caracteres" />
 
-        </androidx.constraintlayout.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.gms.ads.formats.UnifiedNativeAdView>
 </androidx.cardview.widget.CardView>
