--- a/app/src/main/res/layout/criar_login.xml
+++ b/app/src/main/res/layout/criar_login.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/oculos_grande" />
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/vincular_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +20,6 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/txt_listas"
             android:layout_marginTop="@dimen/trade_size_dp_21"
@@ -28,10 +27,10 @@
             android:hint="@string/email_tx"
 
             android:inputType="textEmailAddress" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/criar_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,16 +39,15 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="@dimen/trade_size_dp_17"
             android:hint="@string/password"
 
             android:inputType="textPassword" />
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/criar_repetir_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,7 +56,6 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="false"
             android:layout_alignParentStart="false"
             android:layout_marginTop="@dimen/trade_size_dp_17"
             android:ems="10"
@@ -66,7 +63,7 @@
 
             android:inputType="textPassword" />
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
