--- a/app/src/main/res/layout/filme_info.xml
+++ b/app/src/main/res/layout/filme_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +13,6 @@
         android:background="@color/black_transparente"
         android:maxLines="2"
         android:paddingStart="@dimen/trade_size_dp_4"
-        android:paddingLeft="@dimen/trade_size_dp_4"
         android:paddingEnd="@dimen/trade_size_dp_4"
         android:textSize="@dimen/trade_txt_size_sp_20"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +54,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
         android:layout_marginTop="4dp"
         android:text="@string/produtora"
         android:textStyle="normal|italic"
@@ -68,10 +66,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:maxLines="1"
         app:layout_constraintEnd_toStartOf="@+id/lancamento"
         app:layout_constraintStart_toEndOf="@+id/label_produtora"
@@ -84,7 +80,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
         android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/produtora"
@@ -177,7 +172,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="@dimen/trade_size_dp_2"
-        android:layout_marginRight="@dimen/trade_size_dp_2"
         android:layout_marginBottom="@dimen/trade_size_dp_4"
         app:cardCornerRadius="@dimen/trade_size_dp_2"
         app:cardElevation="3dp"
@@ -199,7 +193,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/trade_size_dp_2"
-                android:layout_marginLeft="@dimen/trade_size_dp_2"
                 android:text="@string/original_title"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -229,7 +222,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/trade_size_dp_2"
-                android:layout_marginLeft="@dimen/trade_size_dp_2"
                 android:text="@string/spoken_languages"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/original_title" />
@@ -253,7 +245,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/trade_size_dp_2"
-                android:layout_marginLeft="@dimen/trade_size_dp_2"
                 android:text="@string/popularity"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spoken_languages" />
@@ -263,7 +254,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/trade_size_dp_4"
-                android:layout_marginRight="@dimen/trade_size_dp_4"
                 android:gravity="end"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/popularity_label"
@@ -277,7 +267,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/production_countries"
                 android:layout_marginStart="@dimen/trade_size_dp_2"
-                android:layout_marginLeft="@dimen/trade_size_dp_2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/popularity_label" />
 
@@ -394,10 +383,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/trade_size_dp_8"
-        android:layout_marginLeft="@dimen/trade_size_dp_7"
         android:layout_marginTop="@dimen/trade_size_dp_2"
         android:layout_marginEnd="@dimen/trade_size_dp_8"
-        android:layout_marginRight="@dimen/trade_size_dp_8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_crews" />
@@ -439,7 +426,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/trade_size_dp_2"
         android:layout_marginEnd="@dimen/trade_size_dp_8"
-        android:layout_marginRight="@dimen/trade_size_dp_8"
         android:layout_weight="1"
         android:text="@string/ver_tmdb"
         android:textAlignment="center"
@@ -485,4 +471,4 @@
         tools:listitem="@layout/scroll_similares"
         tools:orientation="horizontal" />
 
-</androidx.constraintlayout.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
