--- a/app/src/main/res/layout/recuperar_senha_layout.xml
+++ b/app/src/main/res/layout/recuperar_senha_layout.xml
@@ -13,7 +13,7 @@
         android:padding="15dp"
         app:srcCompat="@drawable/oculos_grande" />
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ed_email_recuperar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
             android:hint="@string/email_tx"
             android:inputType="textEmailAddress" />
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
