--- a/app/src/main/res/layout/reset_senha.xml
+++ b/app/src/main/res/layout/reset_senha.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="@dimen/trade_size_dp_10"
         android:textColor="@color/blue_main" />
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/pass"
@@ -33,7 +33,7 @@
 
             android:hint="@string/password" />
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -45,7 +45,7 @@
         android:textColor="@color/red"
         android:layout_marginLeft="@dimen/trade_size_dp_12" />
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/repetir_pass"
@@ -63,7 +63,7 @@
 
             android:hint="@string/password" />
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
