alterado tipos botoes em filme/tvshow
com.google.android.material.button.MaterialButton

--- a/app/src/main/res/layout/filme_info.xml
+++ b/app/src/main/res/layout/filme_info.xml
@@ -401,7 +401,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycle_filme_producao" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/imdb_site"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -420,7 +421,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adView" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/tmdb_site"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
